2004-02-18  Atsushi Enomoto <atsushi@ximian.com>

	* LocationPathPattern.cs : Implemented easy XPathNavigator cache on
	  predicate evaluation in Matches().

2004-02-17  Atsushi Enomoto <atsushi@ximian.com>

	* KeyPattern.cs, Pattern.cs : removed using decls.

2004-02-17  Atsushi Enomoto <atsushi@ximian.com>

	* LocationPathPattern.cs : Optimized Matches(). For non-positional
	  patterns, it never iterates predicate, just evaluate boolean.

2004-02-16  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathDocument.cs,
	  DTMXPathDocumentBuilder.cs,
	  DTMXPathDocumentWriter.cs,
	  DTMXPathNavigator.cs,
	  DTMXPathNode.cs :
	    Made classes internal by default (still publicly available with
	    OUTSIDE_SYSTEM_XML switch). Removed unused "position" field.
	    Optimized DTMXPathNavigator.Value a bit.
	* LocationPathPattern.cs : Modified some fields to private.

2004-02-13  Atsushi Enomoto <atsushi@ximian.com>

	* Added DTMXPathDocumentWriter.cs. It supports DTMXPathNavigator as
	  the resulting document tree.
	* DTMXPathDocumentBuilder.cs : Code refactory (to get closer to dtm
	  writer and commonify tasks they both should do). Reduced initial
	  array size (400 to 200, for attribute 800 to 200), and extending 
	  size from 2x to 4x (to reduce _times_ of allication copy).
	* DTMXPathNode.cs : (and all above) added experimental "DTM_CLASS"
	  switch, which changes nodes from struct to class. (It will reduce
	  memory consumption by 2/3, but will also reduce speed by 2/3.)

2004-01-27  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathDocumentBuilder.cs : Namespace nodes are incorrectly created.
	  This fix should make XPathDocument compatible with XmlDocument.

2004-01-26  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathDocument.cs : CreateNavigator() should return the first root
	  as a clone.
	* DTMXPathNavigator.cs : ComparePosition() incorrectly compared 
	  attributes and namespaces orders.  Implemented IsSamePosition() more